@@ -1,3 +1,8 @@
+2003-08-20  Rahul Bhargava <rahul032213@aol.com>
+
+        * nsd/return.c:
+	* Updated to support HTTP/1.1 Transfer Chunk Encoding Headers only.
+
 2003-08-19  Nathan Folkman <shmooved@aol.com>
 
         * nsd/return.c: Updated to include status code from: 
